--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input name="email" id="email" type="email" placeholder="Your Email">
         <input name="subject" type="text" id="text" placeholder="Subject">
         <textarea name="message" id="message" placeholder="Your message" rows="4" cols="22"></textarea>
-        <button id="send">Send</button>
+        <button name="submit" id="send">Send</button>
         </form>
     </div>
 
