--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			Email.send({
 				Host : "smtp.gmail.com",
 				Username : "siwachashwani0103@gmail.com",
-				Password : "siwach$132003",
+				Password : "password",
         
 				To: 'siwachashwani0103@gmail.com',
 				From: "ashwanisiwach132003@gmail.com",
